--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,17 @@
     transform: rotate(360deg);
   }
 }
+
+.mapouter {
+  position: relative;
+  text-align: right;
+  height: 500px;
+  width: 600px;
+}
+
+.gmap_canvas {
+  overflow: hidden;
+  background: none !important;
+  height: 500px;
+  width: 600px;
+}
